syntax = "proto3";

option csharp_namespace = "Pdr.Grpc.Server";

package user;

service Users {
  rpc GetAll(EmptyRequest) returns (UsersReply) {}
  rpc GetById (UserFindRequest) returns (UserReply) {}
  rpc Create (UserCreateRequest) returns (UserCreateReply) {}
  rpc Update (UserUpdateRequest) returns (UserReply) {}
  rpc Delete (UserFindRequest) returns (EmptyReply) {}
}

message EmptyRequest {
}

message EmptyReply {
}

message UserCreateRequest {
  string user_name = 1;
  string email = 2;
  string password = 3;
}

message UserCreateReply {
  bool succeeded = 1;
  repeated string errors = 2;
  UserReply user = 3;
}

message UserFindRequest {
  string user_id = 1;
}

message UserReply {
  string user_id = 1;
  string user_name = 2;
  string email = 3;
}

message UsersReply {
  repeated UserReply users = 1;
}

message UserUpdateRequest {
  string user_id = 1;
  string user_name = 2;
  string email = 3;
  string password = 4;
}